--- a/azure/deploy.yaml
+++ b/azure/deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: delivery
-          image: delivery.azurecr.io/delivery:latest
+          image: user13.azurecr.io/delivery:latest
           ports:
             - containerPort: 8080
